--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 100%;margin: 0;" lang="en">
+<html style="height: calc(var(--vh, 1vh) * 100);margin: 0;" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
