--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html style="height: calc(var(--vh, 1vh) * 100);margin: 0;" lang="en">
+<html style="margin: 0; min-height: -webkit-fill-available;" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body style="height: 100%;margin: 0">
+  <body style="margin: 0; min-height: -webkit-fill-available;  ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
